# devops_agent

./: .env.example  .gitignore  CLAUDE.md  Makefile  PLAN.md  README.md  pyproject.toml  requirements-lambda.txt
.claude/: settings.json
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  COMPARISON.md  DEMO_SCRIPT.md  MCP_USAGE.md
docs/ADR/: ADR-001-mcp-topology.md  ADR-002-dynamodb-schema.md  ADR-003-lambda-packaging.md
evals/: false_positive_rate.py
infra/: backend.tf  main.tf  outputs.tf  variables.tf  versions.tf
infra/demo/: main.tf  outputs.tf  variables.tf  versions.tf
infra/modules/agent_lambda/: iam.tf  main.tf  outputs.tf  variables.tf
infra/modules/eventbridge/: main.tf  outputs.tf  variables.tf
infra/modules/notifications/: main.tf  outputs.tf  variables.tf
infra/modules/seed_leaks/: main.tf  outputs.tf  variables.tf
infra/modules/storage/: main.tf  outputs.tf  variables.tf
scripts/: generate_report.py  run_local.py
src/agent/: graph.py  guardrails.py  handler.py  state.py
src/agent/models/: finding.py  investigation.py
src/agent/nodes/: analyze.py  gather.py  plan.py  recommend.py
src/agent/prompts/: analyze.md  plan.md  recommend.md  system.md
src/agent/tools/: __init__.py  cloudwatch.py  cost_explorer.py  ec2_inventory.py  security.py  trusted_advisor.py
src/common/: aws_clients.py  bedrock_client.py  config.py  logger.py  metrics.py  secrets.py
src/mcp_servers/cloudwatch/: server.py
src/mcp_servers/cost_explorer/: server.py
src/mcp_servers/ec2_inventory/: server.py
src/mcp_servers/security/: server.py
src/mcp_servers/trusted_advisor/: server.py
src/notifications/: dynamodb_writer.py  slack_notifier.py
tests/fixtures/: analyze_response.json  cloudtrail_response.json  config_compliance_response.json  cost_explorer_response.json  ec2_inventory_response.json  findings_sample.json  guardduty_response.json  iam_analyzer_response.json  iam_credential_report.csv  plan_response.json  security_groups_response.json  security_hub_response.json
tests/integration/: test_tools_cloudwatch.py  test_tools_ec2.py
tests/unit/: test_dynamodb_writer.py  test_gather_node_wired_tools.py  test_graph.py  test_metrics.py  test_nodes.py  test_security_tools.py  test_slack_notifier.py
